--- a/anoymous3/frontend/index.html
+++ b/anoymous3/frontend/index.html
@@ -51,7 +51,7 @@
     -->
 
   <!-- ===== 구조화 데이터(JSON-LD) ===== -->
-  <script type="application/ld+json">
+  <!--<script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
@@ -63,7 +63,7 @@
           "query-input": "required name=q"
         }
       }
-    </script>
+    </script>-->
   <!-- (선택) 조직 정보가 있으면 로고/소셜을 포함해 추가
     <script type="application/ld+json">
       {
